// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render correctly 1`] = `
"<div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-textarea\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow textarea-wrapper\\"><span class=\\"nextui-input-placeholder mock\\">placeholder</span><textarea type=\\"text\\" id=\\"nextui-input-ubmf7qfo\\" class=\\"nextui-input-textarea\\" placeholder=\\"placeholder\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"placeholder\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"true\\"></textarea></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><style>
          :global(.textarea-wrapper) {
            box-sizing: border-box;
            width: initial;
            min-width: 12.5rem;
            max-width: 100%;
            height: auto;
          }
          :global(textarea) {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            width: 100%;
            height: 100%;
            resize: none;
            border: none;
            outline: none;
          }
        </style>"
`;

exports[`Textarea should work with different styles 1`] = `
"<div><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-textarea\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow textarea-wrapper\\"><textarea type=\\"text\\" id=\\"nextui-input-sq6h2ih5\\" class=\\"nextui-input-textarea\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"true\\"></textarea></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: initial;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #7928ca;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: inherit;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #7928ca;
            box-shadow: 0 0 0 0px
              #7928ca;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><style>
          :global(.textarea-wrapper) {
            box-sizing: border-box;
            width: initial;
            min-width: 12.5rem;
            max-width: 100%;
            height: auto;
          }
          :global(textarea) {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            width: 100%;
            height: 100%;
            resize: none;
            border: none;
            outline: none;
          }
        </style><div data-state=\\"normal\\" class=\\"nextui-input-main-container\\"><div class=\\"nextui-input-container nextui-input-container-textarea\\"><label class=\\"nextui-input-wrapper nextui-input-wrapper-shadow textarea-wrapper\\"><textarea type=\\"text\\" id=\\"nextui-input-r9njn70t\\" class=\\"nextui-input-textarea\\" placeholder=\\"\\" autocomplete=\\"off\\" data-state=\\"normal\\" aria-placeholder=\\"\\" aria-readonly=\\"false\\" aria-required=\\"false\\" aria-multiline=\\"true\\"></textarea></label></div><div class=\\"nextui-input-helper-text-container\\"></div><style>
          .nextui-input-main-container {
            width: 20%;
            display: inline-flex;
            flex-direction: column;
            justify-content: center;
            position: relative;
            box-sizing: border-box;
            -webkit-box-align: center;
            border-radius: 12px;
            ;
          }
          .nextui-input-container {
            width: 100%;
            transition: all 0.25s ease;
            border-radius: 12px;
          }
          .nextui-input-container-input {
            display: inline-flex;
            align-items: center;
            height: calc(2 * 1.25rem);
          }
          .nextui-input-wrapper {
            flex: 1;
            position: relative;
            display: inline-flex;
            vertical-align: middle;
            align-items: center;
            user-select: none;
            border-radius: 12px;
            background: #eaeaea;
          }
          .input-wrapper {
            height: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow: {
            transition: all 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-bordered {
            background: transparent;
            border: none;
            box-shadow: 0 0 0 0px
              #eaeaea;
            transition: box-shadow 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined {
            background: transparent;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::after {
            content: '';
            position: absolute;
            z-index: 1;
            bottom: 0;
            width: 100%;
            height: 0px;
            background: #eaeaea;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined::before {
            position: absolute;
            content: '';
            z-index: 2;
            width: 0;
            bottom: 0;
            height: 2px;
            left: 50%;
            transform: translate(-50%);
            background: #000;
            transition: width 0.25s ease;
          }
          .nextui-input-wrapper.nextui-input-wrapper-hover.nextui-input-wrapper-underlined::before {
            width: 100%;
          }
          .nextui-input-wrapper.nextui-input-wrapper-disabled {
            cursor: not-allowed;
          }
          .nextui-input-helper-text-container {
            position: absolute;
            opacity: 0;
            bottom: calc(2 * 0.75rem * -1);
            transition: opacity 0.25s ease;
          }
          .nextui-input-helper-text-container.nextui-input-helper-text-container-with-value {
            opacity: 1;
          }
          .nextui-input-helper-text {
            margin: 2px 0 0 10px;
            font-size: 0.7rem;
            color: #333;
          }
          .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only) {
            transform: translateY(-2px);
          }
          .nextui-input-wrapper.nextui-input-wrapper-shadow.nextui-input-wrapper-hover:not(.nextui-input-container-read-only) {
            box-shadow: 0 5px 20px -5px rgba(0, 0, 0, .1);
          }
          .nextui-input-container:hover
            .nextui-input-wrapper.nextui-input-wrapper-bordered,
            .nextui-input-container.nextui-input-container-hover:not(.nextui-input-container-read-only)
            .nextui-input-wrapper.nextui-input-wrapper-bordered {
            border-color: #000;
            box-shadow: 0 0 0 0px
              #000;
          }
          input.nextui-input-disabled, textarea.nextui-input-disabled {
            color: #888;
            cursor: not-allowed;
          }
          input.nextui-input-rounded, textarea.nextui-input-rounded {
            padding: 0 calc(0.75rem * 0.5);
          }
          input:focus::placeholder,
          textarea:focus::placeholder {
            opacity: 0;
            transition: opacity 0.25s ease 0s;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) input {
            margin: 4px 10px;
          }
          .nextui-input-wrapper:not(.nextui-input-wrapper-underlined) textarea {
            margin: 0px;
            padding: 0.5rem 0.75rem;
          }
          .nextui-input-wrapper.nextui-input-wrapper-underlined input,
          .nextui-input-wrapper.nextui-input-wrapper-underlined textarea {
            margin: 4px 5px;
          }
          input,
          textarea {
            padding: 0;
            font-size: .875rem;
            background-color: transparent;
            border: none;
            color: #333;
            border-radius: 0;
            outline: none;
            width: 100%;
            height: 100%;
            min-width: 0;
            -webkit-appearance: none;
          }
          input.nextui-input-left-content, textarea.nextui-input-left-content {
            margin-left: 0;
          }
          input.nextui-input-right-content, textarea.nextui-input-right-content {
            margin-right: 0;
          }
          input::placeholder,
          textarea::placeholder {
            color: #999;
            transition: opacity 0.25s ease 0s;
            -moz-transition: opacity 0.25s ease 0s;
            -ms-transition: opacity 0.25s ease 0s;
            -webkit-transition: opacity 0.25s ease 0s;
          }
          input:-webkit-autofill,
          input:-webkit-autofill:hover,
          input:-webkit-autofill:active,
          input:-webkit-autofill:focus,
          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
            -webkit-text-fill-color: #333 !important;
          }
        </style></div><style>
          :global(.textarea-wrapper) {
            box-sizing: border-box;
            width: 20%;
            min-width: 12.5rem;
            max-width: 100%;
            height: auto;
          }
          :global(textarea) {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            width: 100%;
            height: 100%;
            resize: none;
            border: none;
            outline: none;
          }
        </style></div>"
`;
